# MineCoin

./: CMakeLists.txt  README.md
include/: utils.hpp
script/: auth_async.sh  getcurrencies.sh  getme.sh  getprofile.sh  getsummary.sh  gettickers.sh  gettimestamp.sh  subscribe.sh  subscribe_async.sh  unsubscribe.sh  unsubscribe_async.sh
src/: utils.cpp
test/: http_client.cpp  websocket_client.cpp  websocket_client_async_ssl.cpp
